address error - change to <br> index.html

--- a/contact.html
+++ b/contact.html
@@ -50,15 +50,15 @@
                     <!-- Form Begins -->
                     <form class="p-2">
                         <div class="form-group">
-                            <label for="nameinput">Name</label></br>
+                            <label for="nameinput">Name</label><br>
                             <input type="text" class="form-control" id="nameinput" placeholder="Your name">
                         </div>
                         <div class="form-group">
-                            <label for="emailinput">Email</label></br>
+                            <label for="emailinput">Email</label><br>
                             <input type="email" class="form-control" id="emailinput" placeholder="Your email">
                         </div>
                         <div class="form-group">
-                            <label for="messagetextarea">Message</label></br>
+                            <label for="messagetextarea">Message</label><br>
                             <textarea class="form-control" id="messagetextarea" placeholder="Your message"
                                 rows="6"></textarea>
                         </div>
